--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
+body {
+display: flex;
+height: 100vh;
+align-content: center;
+}
+
 .board {
     display: grid;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
     gap: 2px;
+    margin: auto;
 }
 .cell {
     border: 1px solid black;
@@ -11,4 +18,20 @@
     align-items: center;
     font-size: 2em;
     cursor: pointer;
+}
+
+.cell:nth-child(-n + 3) {
+    border-top: none;
+} 
+
+.board div:nth-child(3n) {
+    border-right: none;
+}
+
+.cell:nth-child(3n  - 2) {
+    border-left: none;
+} 
+
+.cell:nth-child(n + 7) {
+    border-bottom: none;
 }
