--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
 body {
-display: flex;
-height: 100vh;
-align-content: center;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.board-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
 }
 
 .board {
@@ -10,9 +18,18 @@ align-content: center;
     grid-template-rows: repeat(3, 100px);
     gap: 2px;
     margin: auto;
+    overflow: hidden;
 }
+
+.board div{
+    outline:2px solid #474747;
+  }
+  .board div:last-child {
+    grid-area:3/3;
+  }
+
 .cell {
-    border: 1px solid black;
+    border: 1px solid #474747;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,5 +50,13 @@ align-content: center;
 } 
 
 .cell:nth-child(n + 7) {
+    border-bottom: none;
+}
+
+.modal-footer {
+    border-top: none;
+}
+
+.modal-header {
     border-bottom: none;
 }
