--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     display: flex;
-    height: 100vh;
+   height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 4rem;
+    margin-top: 6rem;
 }
 
 .board {
@@ -61,6 +62,15 @@ body {
     border-bottom: none;
 }
 
-.mode-container {
+.controls-container {
     text-align: center;
+}
+
+.mode-container {
+   
+    padding-bottom: 3rem;
+}
+
+.difficulty-alert {
+    display: inline-block;
 }
