--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 .board-container {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
+    gap: 2rem;
     margin-top: 6rem;
 }
 
@@ -68,9 +68,19 @@ body {
 
 .mode-container {
    
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
 }
 
 .difficulty-alert {
     display: inline-block;
+}
+
+
+.toast {
+    background-color: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure the toast appears on top of other elements */
 }
