--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   width: 80%;
   height: 80%;
   min-height: auto;
-  margin: 30px auto 0 auto;
+  margin: auto;
   background-color: #497959;
   padding: 20px 30px;
   overflow-y: auto;
@@ -41,6 +41,9 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 body:after {
@@ -56,7 +59,7 @@ body:after {
   width: 50px;
   height: 8px;
   background: #f1f1f1;
-  top: 81.5%;
+  top: 80%;
   margin-top: 75px;
   margin-right: 60px;
   right: 9%;
@@ -81,7 +84,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-top: 8rem;
+    /*margin-top: 8rem;*/
 }
 
 .board {
@@ -180,5 +183,8 @@ body {
 @media only screen and (max-width: 600px) {
     body {
       width: 100%;
+   /* height: 91%;
+    overflow-y: hidden;
+    */
     }
   }
