--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,13 @@ body {
 @media only screen and (max-width: 600px) {
     body {
       width: 100%;
-   /* height: 91%;
+   height: 90%;
     overflow-y: hidden;
-    */
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    body:after {
+        top: 85%;
     }
   }
